# rinha-2026-rust

./: .dockerignore  Cargo.toml  Dockerfile  PROMPT.md  README.md  docker-compose.yml  info.json
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  routes.rs  search.rs  state.rs
crates/api/tests/: api_integration.rs
crates/build-dataset/: Cargo.toml
crates/build-dataset/src/: lib.rs  main.rs
crates/build-dataset/tests/: roundtrip.rs
crates/shared/: Cargo.toml
crates/shared/src/: datetime.rs  format.rs  lib.rs  quantize.rs  vectorize.rs
crates/shared/tests/: golden.rs
infra/haproxy/: haproxy.cfg
tasks/prd-rinha-backend-2026/: 1_task.md  2_task.md  3_task.md  4_task.md  prd.md  tasks.md  techspec.md
