[workspace]
resolver = "3"
members = [
    "crates/shared",
    "crates/build-dataset",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
shared = { path = "crates/shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "matched-path"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "macros", "signal", "io-util"] }
memmap2 = "0.9"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "smallvec", "tracing-log", "env-filter"] }
tower = { version = "0.5", default-features = false }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "server-graceful"] }
http-body-util = "0.1"
libc = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
debug = false

[profile.test]
opt-level = 1
