[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
similar_names = "allow"

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "macros", "signal", "io-util", "time"] }
http-body-util = { workspace = true }
tower = { version = "0.5", features = ["util"] }
